--- a/configs/config.yml
+++ b/configs/config.yml
@@ -7,8 +7,11 @@ log:
   log_name: log.log
 
 mysql:
-  url: 127.0.0.1
+  username: root
+  password: 123456
+  host: 127.0.0.1
   port: 3306
+  db: chat
 
 redis:
   host: 127.0.0.1
